
09/25/2019
Implemented removing powerups from powerup inv
Removed inv artifact logic from dropitem in nsa
Implement powerups going into powerup inventory only via PickupItemEvent
DONE: CROUCHING DESYNCS CHARGES ARTIFACT

09/26/2019
Converted Project from spigot to paper
Update WOP.isWOp() to handle null customName Strings
Fixed LivingEntityData.inventoryIsSwapped (they were swapped, ironic right?)
Implemented Swapping to powerup inventory only when wop is equipped
Updated Wop.getPowerLevel() to handle null customNames, fixing NSA.initPlayer() on reload when no wop is equipped

09/30/2019
Bug fixes to dropping/picking up powers ups

10/03/2019
begin conversion over to object oriented design using hashmapping
much will be like the current playerdata object, where auxiliary data is stored in a data the is keyed to the uuid

01/13/2020
wop rm (remove all) needs to be debugged. Looks like an exception is hit (removes wop in hand and displays syntax)
wop X -Y spawns wop with no ammo - +Y works fine (all neg wops = no ammo if just x is used)
added healing power to wopData
no ammo bug fixed itself?
fixed wop rm

01/15/2020
fixed bugs with ammo regen wops
timer not firing b/c wop.entityisplayer no set when creating wop (wopdata needed to use method rather then directly setting the entity
fixed ammo regen not firing on pickup
fixed neg regen wop showing up with no ammo (check was setting to 0 on first regen)
fixed neg regen not going all the way to 0 ammo

01/16/2020
DONE: non entity damage does not start hp regen timer
fixed hp regen errors (powers array was not large enough)
fixed damage (was never set to event damage so was never applied lol)
tested up to protection


fixed poison (temporarily)
TODO: select Generated wop should have (weaponlevel + 1)/2 instead of the weaponlevel
TODO: negative toxic level

03/15/2020
fixed non entity damage not starting hp regen timer
applied resistances to non entity damage