@@ -92,3 +92,6 @@ TODO: negative toxic level
 03/15/2020
 fixed non entity damage not starting hp regen timer
 applied resistances to non entity damage
+
+3/15/2020
+commit test and .gitignore update
